--- a/app/views/cards/_card.html.slim
+++ b/app/views/cards/_card.html.slim
@@ -1,9 +1,12 @@
-.card.card-flip.text-center[style='height:65vh']
+- theirs ||= false
+
+div[class="card text-center border-0 #{'card-flip' unless theirs }"]
   .card-front
     .card-body
       .embed-responsive
         = image_tag('card-back.jpg', width: "100%")
 
-  .card-back
-    .card-body
-      = image_tag(image, width: "100%")
+  - unless theirs
+    .card-back
+      .card-body
+        = image_tag(image, width: "100%")
